# aoc2023

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
cmake/: dependencies.cmake  install-config.cmake  install-rules.cmake  options.cmake
include/aoc2023/: aoc2023.hpp  day2.hpp  day3.hpp
solutions/: CMakeLists.txt  day1.cpp  day2.cpp  main.cpp
src/: aoc2023.cpp  day1.cpp  day2.cpp  day3.cpp
tests/: CMakeLists.txt
tests/src/: aoc2023_test.cpp  d1.cpp  d1p1.cpp  d2.cpp  d3.cpp
